JavaPlusPlusCompiler/src/main/java/ir/ac/kntu/khalili/javapluspluscompiler/JavaPlusPlusParser.java
// Generated from JavaPlusPlus.g4 by ANTLR 4.9.2
package ir.ac.kntu.khalili.javapluspluscompiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaPlusPlusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, INT_NO=2, INT=3, FLT_NO=4, FLT=5, AS=6, MUL=7, DIV=8, ADD=9, SUB=10, 
		IF=11, ELSE=12, SWITCH=13, CASE=14, BREAK=15, EQ=16, NEQ=17, GTE=18, LTE=19, 
		GT=20, LT=21, WHILE=22, FOR=23, DO=24, WS=25, OPEN_PAR=26, CLOSE_PAR=27, 
		OPEN_CUR_BRA=28, CLOSE_CUR_BRA=29, CLASS=30, MAIN_FUNC=31, INPUT=32, OUTPUT=33, 
		FUNC=34, RET=35, SEMICOLON=36, COMMA=37, CLASS_ID=38, ID=39, COMMENT=40;
	public static final int
		RULE_s = 0, RULE_exp1 = 1, RULE_exp2 = 2, RULE_exp3 = 3, RULE_exp4 = 4, 
		RULE_exp5 = 5, RULE_ioSt = 6, RULE_defSt = 7, RULE_assignmentSt = 8, RULE_ifElseSt = 9, 
		RULE_compareSt = 10, RULE_elseSt = 11, RULE_switchSt = 12, RULE_caseSt = 13, 
		RULE_loopSt = 14, RULE_whileSt = 15, RULE_forSt = 16, RULE_doWhileSt = 17, 
		RULE_funcCallSt = 18, RULE_retSt = 19, RULE_num = 20, RULE_relop = 21, 
		RULE_func = 22, RULE_type = 23, RULE_arg = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "exp1", "exp2", "exp3", "exp4", "exp5", "ioSt", "defSt", "assignmentSt", 
			"ifElseSt", "compareSt", "elseSt", "switchSt", "caseSt", "loopSt", "whileSt", 
			"forSt", "doWhileSt", "funcCallSt", "retSt", "num", "relop", "func", 
			"type", "arg"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", null, "'int'", null, "'float'", "'='", "'*'", "'/'", "'+'", 
			"'-'", "'if'", "'else'", "'switch'", "'case'", "'break'", "'=='", "'!='", 
			"'>='", "'<='", "'>'", "'<'", "'while'", "'for'", "'do'", null, "'('", 
			"')'", "'{'", "'}'", "'class'", "'main'", "'input'", "'output'", null, 
			"'return'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "INT_NO", "INT", "FLT_NO", "FLT", "AS", "MUL", "DIV", "ADD", 
			"SUB", "IF", "ELSE", "SWITCH", "CASE", "BREAK", "EQ", "NEQ", "GTE", "LTE", 
			"GT", "LT", "WHILE", "FOR", "DO", "WS", "OPEN_PAR", "CLOSE_PAR", "OPEN_CUR_BRA", 
			"CLOSE_CUR_BRA", "CLASS", "MAIN_FUNC", "INPUT", "OUTPUT", "FUNC", "RET", 
			"SEMICOLON", "COMMA", "CLASS_ID", "ID", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaPlusPlus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaPlusPlusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SContext extends ParserRuleContext {
		public Token CLASS;
		public Token CLASS_ID;
		public Token OPEN_CUR_BRA;
		public Token CLOSE_CUR_BRA;
		public Token SEMICOLON;
		public TerminalNode CLASS() { return getToken(JavaPlusPlusParser.CLASS, 0); }
		public TerminalNode CLASS_ID() { return getToken(JavaPlusPlusParser.CLASS_ID, 0); }
		public TerminalNode OPEN_CUR_BRA() { return getToken(JavaPlusPlusParser.OPEN_CUR_BRA, 0); }
		public Exp1Context exp1() {
			return getRuleContext(Exp1Context.class,0);
		}
		public TerminalNode CLOSE_CUR_BRA() { return getToken(JavaPlusPlusParser.CLOSE_CUR_BRA, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaPlusPlusParser.SEMICOLON, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaPlusPlusListener ) ((JavaPlusPlusListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaPlusPlusListener ) ((JavaPlusPlusListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((SContext)_localctx).CLASS = match(CLASS);
			CompilerController.symbolTable.addSymbol(((SContext)_localctx).CLASS.getText(), ((SContext)_localctx).CLASS);
			setState(52);
			((SContext)_localctx).CLASS_ID = match(CLASS_ID);
			CompilerController.symbolTable.addSymbol(((SContext)_localctx).CLASS_ID.getText(), ((SContext)_localctx).CLASS_ID);
			setState(54);
			((SContext)_localctx).OPEN_CUR_BRA = match(OPEN_CUR_BRA);
			CompilerController.symbolTable.addSymbol(((SContext)_localctx).OPEN_CUR_BRA.getText(), ((SContext)_localctx).OPEN_CUR_BRA);
			setState(56);
			exp1();
			setState(57);
			((SContext)_localctx).CLOSE_CUR_BRA = match(CLOSE_CUR_BRA);
			CompilerController.symbolTable.addSymbol(((SContext)_localctx).CLOSE_CUR_BRA.getText(), ((SContext)_localctx).CLOSE_CUR_BRA);
			setState(59);
			((SContext)_localctx).SEMICOLON = match(SEMICOLON);
			CompilerController.symbolTable.addSymbol(((SContext)_localctx).SEMICOLON.getText(), ((SContext)_localctx).SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp1Context extends ParserRuleContext {
		public Token MAIN_FUNC;
		public Token OPEN_PAR;
		public Token CLOSE_PAR;
		public Token OPEN_CUR_BRA;
		public Token CLOSE_CUR_BRA;
		public TerminalNode MAIN_FUNC() { return getToken(JavaPlusPlusParser.MAIN_FUNC, 0); }
		public TerminalNode OPEN_PAR() { return getToken(JavaPlusPlusParser.OPEN_PAR, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(JavaPlusPlusParser.CLOSE_PAR, 0); }
		public TerminalNode OPEN_CUR_BRA() { return getToken(JavaPlusPlusParser.OPEN_CUR_BRA, 0); }
		public TerminalNode CLOSE_CUR_BRA() { return getToken(JavaPlusPlusParser.CLOSE_CUR_BRA, 0); }
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public List<Exp2Context> exp2() {
			return getRuleContexts(Exp2Context.class);
		}
		public Exp2Context exp2(int i) {
			return getRuleContext(Exp2Context.class,i);
		}
		public Exp1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaPlusPlusListener ) ((JavaPlusPlusListener)listener).enterExp1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaPlusPlusListener ) ((JavaPlusPlusListener)listener).exitExp1(this);
		}
	}

	public final Exp1Context exp1() throws RecognitionException {
		Exp1Context _localctx = new Exp1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_exp1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNC) {
				{
				{
				setState(62);
				func();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			((Exp1Context)_localctx).MAIN_FUNC = match(MAIN_FUNC);
			CompilerController.symbolTable.addSymbol(((Exp1Context)_localctx).MAIN_FUNC.getText(), ((Exp1Context)_localctx).MAIN_FUNC);
			setState(70);
			((Exp1Context)_localctx).OPEN_PAR = match(OPEN_PAR);
			CompilerController.symbolTable.addSymbol(((Exp1Context)_localctx).OPEN_PAR.getText(), ((Exp1Context)_localctx).OPEN_PAR);
			setState(72);
			((Exp1Context)_localctx).CLOSE_PAR = match(CLOSE_PAR);
			CompilerController.symbolTable.addSymbol(((Exp1Context)_localctx).CLOSE_PAR.getText(), ((Exp1Context)_localctx).CLOSE_PAR);
			setState(74);
			((Exp1Context)_localctx).OPEN_CUR_BRA = match(OPEN_CUR_BRA);
			CompilerController.symbolTable.addSymbol(((Exp1Context)_localctx).OPEN_CUR_BRA.getText(), ((Exp1Context)_localctx).OPEN_CUR_BRA);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLT) | (1L << IF) | (1L << SWITCH) | (1L << WHILE) | (1L << FOR) | (1L << DO) | (1L << INPUT) | (1L << OUTPUT) | (1L << ID))) != 0)) {
				{
				{
				setState(76);
				exp2();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			((Exp1Context)_localctx).CLOSE_CUR_BRA = match(CLOSE_CUR_BRA);
			CompilerController.symbolTable.addSymbol(((Exp1Context)_localctx).CLOSE_CUR_BRA.getText(), ((Exp1Context)_localctx).CLOSE_CUR_BRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp2Context extends ParserRuleContext {
		public Token SEMICOLON;
		public IoStContext ioSt() {
			return getRuleContext(IoStContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JavaPlusPlusParser.SEMICOLON, 0); }
		public DefStContext defSt() {
			return getRuleContext(DefStContext.class,0);
		}
		public AssignmentStContext assignmentSt() {
			return getRuleContext(AssignmentStContext.class,0);
		}
		public IfElseStContext ifElseSt() {
			return getRuleContext(IfElseStContext.class,0);
		}
		public SwitchStContext switchSt() {
			return getRuleContext(SwitchStContext.class,0);
		}
		public LoopStContext loopSt() {
			return getRuleContext(LoopStContext.class,0);
		}
		public FuncCallStContext funcCallSt() {
			return getRuleContext(FuncCallStContext.class,0);
		}
		public Exp2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaPlusPlusListener ) ((JavaPlusPlusListener)listener).enterExp2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaPlusPlusListener ) ((JavaPlusPlusListener)listener).exitExp2(this);
		}
	}

	public final Exp2Context exp2() throws RecognitionException {
		Exp2Context _localctx = new Exp2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_exp2);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				ioSt();
				setState(86);
				((Exp2Context)_localctx).SEMICOLON = match(SEMICOLON);
				CompilerController.symbolTable.addSymbol(((Exp2Context)_localctx).SEMICOLON.getText(), ((Exp2Context)_localctx).SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				defSt();
				setState(90);
				((Exp2Context)_localctx).SEMICOLON = match(SEMICOLON);
				CompilerController.symbolTable.addSymbol(((Exp2Context)_localctx).SEMICOLON.getText(), ((Exp2Context)_localctx).SEMICOLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				assignmentSt();
				setState(94);
				((Exp2Context)_localctx).SEMICOLON = match(SEMICOLON);
				CompilerController.symbolTable.addSymbol(((Exp2Context)_localctx).SEMICOLON.getText(), ((Exp2Context)_localctx).SEMICOLON);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				ifElseSt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				switchSt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(99);
				loopSt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(100);
				funcCallSt();
				setState(101);
				((Exp2Context)_localctx).SEMICOLON = match(SEMICOLON);
				CompilerController.symbolTable.addSymbol(((Exp2Context)_localctx).SEMICOLON.getText(), ((Exp2Context)_localctx).SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp3Context extends ParserRuleContext {
		public Token ADD;
		public Token SUB;
		public List<Exp4Context> exp4() {
			return getRuleContexts(Exp4Context.class);
		}
		public Exp4Context exp4(int i) {
			return getRuleContext(Exp4Context.class,i);
		}
		public List<TerminalNode> ADD() { return getTokens(JavaPlusPlusParser.ADD); }
		public TerminalNode ADD(int i) {
			return getToken(JavaPlusPlusParser.ADD, i);
		}
		public List<TerminalNode> SUB() { return getTokens(JavaPlusPlusParser.SUB); }
		public TerminalNode SUB(int i) {
			return getToken(JavaPlusPlusParser.SUB, i);
		}
